--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@emailjs/browser": "^4.4.1",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@fortawesome/fontawesome-svg-core": "~1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "aceternity-ui": "^0.2.2",
+    "ng-particles": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tsparticles": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
